--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="theme-color" content="#ae4af9"/>
     <meta charset="UTF-8" />
     <title>HTML, CSS and SASS Boilerplate</title>
     <meta
